--- a/estilos/style.css
+++ b/estilos/style.css
@@ -89,7 +89,7 @@ td > a{
     text-decoration: none;
     color: #5e5b5b;
 }
-.linha{
+.container4{
     width: 100vw;
     border-top: 3px solid rgba(255, 255, 255, 0.367);
     padding: 10px;
@@ -97,4 +97,8 @@ td > a{
 ::-webkit-scrollbar{
     width: 0;
     height: 0;
+}
+
+a:hover{
+    text-decoration: underline;
 }
